[package]
name = "fez-route"
version = "0.1.0"
authors = ["Blue Cheetah <cheetah001gamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glpk = {path = "../glpk"}
log = "0.4.14"
simple_logger = "1.11.0"
petgraph = "0.5.1"
itertools = "0.10.1"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fixedbitset = "0.2"