[package]
name = "fez-route"
version = "0.1.0"
authors = ["Blue Cheetah <cheetah001gamer@gmail.com>"]
edition = "2018"

[dependencies]
glpk = {path = "../glpk"}
log = "0.4.14"
simple_logger = "1.11.0"
petgraph = "0.6.0"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fixedbitset = "0.4"